# lab2_sem3

./: CMakeLists.txt  FileSorting.h  MainWindow.h  SortingStudents.h  SortingTime.h  main.cpp
Google_tests/: CMakeLists.txt  linked_list_tests.cpp  smrt_ptr_tests.cpp  sorters_tests.cpp
include/animation/: BinaryInsertionSortWidget.h  BubbleSortWidget.h  CountingSortWidget.h  EnhancedSelectionSortWidget.h  HeapSortWidget.h  InsertionSortWidget.h  MergeSortWidget.h  QuickSortWidget.h  SelectionSortWidget.h  ShakerSortWidget.h  ShellSortWidget.h
include/sequence/: ArraySequence.h  DynamicArray.h  LinkedList.h  LinkedListSequence.h  Sequence.h
include/sorting/: BatcherSort.h  BinaryInsertionSort.h  BubbleSort.h  Comps.h  CountingSort.h  EnhancedSelectionSorter.h  HeapSort.h  HelpClass.h  ISorter.h  InsertionSort.h  MergeSort.h  QuickSorter.h  SelectionSort.h  ShakerSort.h  ShellSort.h  ShellSortGap.h  TreeSorter.h  User.h
